fixed overflowing dropdown in modal

--- a/public/js/views/modals/create-room-view.less
+++ b/public/js/views/modals/create-room-view.less
@@ -7,3 +7,9 @@
     font-size: 2.5rem;
   }
 }
+
+.modal-backdrop + .dropdown.selectable {
+  max-height: 350px;
+  overflow: auto;
+}
+
